feat: add advanced patient presence tracking
